--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
 
-    <script type="module" crossorigin src="assets/index.286d91f2.js"></script>
-    <link rel="stylesheet" href="assets/index.016d43c7.css">
+    <script type="module" crossorigin src="/assets/index.0bca8307.js"></script>
+    <link rel="stylesheet" href="/assets/index.016d43c7.css">
   </head>
   <body>
     <div id="root"></div>
