--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ska Diwas</title>
-    <script type="module" crossorigin src="assets/index.0bca8307.js"></script>
-    <link rel="stylesheet" href="assets/index.016d43c7.css">
+    <script type="module" crossorigin src="/assets/index.279a705a.js"></script>
+    <link rel="stylesheet" href="/assets/index.016d43c7.css">
   </head>
   <body>
     <div id="root"></div>
